# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import jobsRouter from "./jobs";
+import profilesRouter from "./profiles";
+import applicationsRouter from "./applications";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
+router.use(jobsRouter);
+router.use(profilesRouter);
+router.use(applicationsRouter);
 
 export default router;
